src/blocks/content-toggle/style.scss
/**
 * #.# Styles
 *
 * CSS for both Frontend+Backend.
 */

 .wp-block-ub-content-toggle {
  margin: 20px 0 20px 0;
	max-width: 740px;
}


.wp-block-ub-content-toggle-accordion {
	position: relative;
	border: 1px solid lightsalmon;
	margin-bottom: 10px;
	.wp-block-ub-content-toggle-accordion-title {
		padding: 10px;
		color: white;
		margin: 0;
		font-size: 20px;
		display: block;
	}
	.wp-block-ub-content-toggle-accordion-content {
		padding: 10px;
	}
	.wp-block-ub-content-toggle-accordion-controls-top {
		position: absolute;
		top: -10px;
		left: 0;
		right: 0;
		justify-content: center;
		display: flex;
		opacity: 0;
		transition: 0.5s opacity ease-in-out;
		> span {
			display: inline-block;
			margin: 0 3px;
		}
	}
	.wp-block-ub-content-toggle-accordion-controls-bottom {
		position: absolute;
		bottom: -10px;
		left: 0;
		right: 0;
		justify-content: center;
		display: flex;
		opacity: 0;
		transition: 0.5s opacity ease-in-out;
		> span {
			display: inline-block;
			margin: 0 3px;
		}
	}
	.wp-block-ub-content-toggle-accordion-title-wrap {
		display: flex;
		align-items: baseline;
		background: lightsalmon;
		cursor: pointer;
		> *:first-child {
			flex-grow: 1;
		}
		.wp-block-ub-content-toggle-accordion-state-indicator {
			display: block;
			margin: 10px;
			transition: 0.5s all;
			transform: rotate(0deg);
			color: white;
			&.open {
				transform: rotate(90deg);
			}
		}
	}
	&:hover {
		.wp-block-ub-content-toggle-accordion-controls-top,
		.wp-block-ub-content-toggle-accordion-controls-bottom {
			opacity: 1;
		}
	}
}

